--- a/SampleApi.yaml
+++ b/SampleApi.yaml
@@ -13,7 +13,7 @@ spec:
         app: SampleApi
     spec:
       containers:
-      - name: SampleApiRepos
+      - name: sampleapirepos
         image: samplecr.azurecr.io/dnrepos:latest
         ports:
         - containerPort: 8080
